# hk-task-scheduler-V2

./: .gitignore  CLAUDE.md  EPCC_CODE.md  EPCC_PLAN.md  PRD.md  README.md  app.py  epcc-features.json  epcc-progress.md  main.py  prompt.py  pyproject.toml  supabase_client.py
data/: .~lock.sample staff schedule.xlsx#  sample staff schedule.xlsx  staff_schedule.json
tests/: test_core.py
